Crud aplicacion externas
