# api/views/Inpunts/AplicationUser.go
@@ -1,0 +1,7 @@
+package views
+
+type AplicationUserInputs struct {
+	UserAppID *uint
+	UserID    *uint
+	FkCompany *uint
+}
