# api/views/Outputs/AplicationUser.go
@@ -1,0 +1,8 @@
+package views
+
+type AplicationUserOutputs struct {
+	Id          uint    `json:"id"`
+	UserNameApp *string `gorm:"unique;not null" json:"userNameApp"`
+	FkCompany   *uint   `json:"fkCompany"`
+	Company     *string `json:"company"`
+}
