# docs/swagger.yaml
@@ -26,6 +26,29 @@ definitions:
         type: string
       success:
         type: boolean
+      users:
+        $ref: '#/definitions/views.Users'
+    type: object
+  views.Users:
+    properties:
+      email:
+        type: string
+      fkCompany:
+        type: integer
+      fkCustomer:
+        type: integer
+      fkRole:
+        type: integer
+      id:
+        type: integer
+      lastLogin:
+        type: string
+      lastname:
+        type: string
+      name:
+        type: string
+      role:
+        type: string
     type: object
 info:
   contact: {}
@@ -59,6 +82,82 @@ paths:
         "500":
           description: Error interno del servidor
       summary: Iniciar sesión
+      tags:
+      - appUser
+  /userApp/:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - default: 1
+        description: Número de página para la paginación
+        in: query
+        name: page
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              additionalProperties:
+                type: string
+              type: object
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      - ApiKeyAuth: []
+      summary: Obtiene todos Ususarios de palicacion
+      tags:
+      - appUser
+  /userApp/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Actualiza un usuario de la aplicación
+      parameters:
+      - description: ID del usuario de la aplicación
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Actualizar un userApp
       tags:
       - appUser
   /userApp/create/:
